--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,17 @@
 Flask==2.3.2
 gtts==2.3.2
-moviepy>=1.0.3
-manim>=0.17.3
+moviepy==1.0.3
+manim==0.17.3
+decorator==4.4.2
+numpy>=1.17.3
+Pillow>=9.1
+requests>=2.27
+tqdm>=4.11.2
+imageio>=2.5
+imageio_ffmpeg>=0.2.0
+proglog<=1.0.0
+click>=8.1.3
+itsdangerous>=2.1.2
+Jinja2>=3.1.2
+Werkzeug>=2.3.3
+blinker>=1.6.2
