--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,5 @@ Jinja2>=3.1.2
 Werkzeug>=2.3.3
 blinker>=1.6.2
 ffmpeg-python>=0.2.0
+python-dotenv>=0.20.0  # To load environment variables for API keys securely
+openai==0.27.0  # OpenAI SDK for ElevenLabs API integration
