--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 ELEVENLABS_API_KEY=sk_968ba5b3f559fd8f005121bb53ff5ad574f8786c6ae76652
-D_ID_API_KEY=your_did_api_key
+D_ID_API_KEY=dGFsZW50bWxhbWJvMTlAZ21haWwuY29t:XgyAmdNCT_7J0aiqvq8eX
 PEXELS_API_KEY=your_pexels_api_key
 WHISPER_API_KEY=your_whisper_api_key
