--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,8 @@ blinker>=1.6.2
 ffmpeg-python>=0.2.0
 python-dotenv>=0.20.0  # To load environment variables for API keys securely
 openai==0.27.0  # OpenAI SDK for ElevenLabs API integration
-pexels==0.0.11
+pexels==0.0.11  # For stock photos/videos integration
+whisper==1.0.0  # For automatic transcription and subtitles generation
+opencv-python==4.6.0.66  # For video frame manipulation and processing
+elevenlabs==1.0.0  # For ElevenLabs API (AI voice synthesis)
+d-id==0.1.0  # For AI-generated avatars (D-ID integration)
