--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,13 @@
 Flask==2.3.2
-gtts==2.3.2
+python-dotenv==1.0.0
+requests==2.31.0
 moviepy==1.0.3
-manim==0.19.0
-numpy>=1.17.3
-Pillow>=9.1
-requests>=2.27
-tqdm>=4.11.2
-imageio>=2.5
-imageio_ffmpeg>=0.2.0
-proglog<=1.0.0
-click>=8.1.3
-itsdangerous>=2.1.2
-Jinja2>=3.1.2
-Werkzeug>=2.3.3
-blinker>=1.6.2
-ffmpeg-python>=0.2.0
-python-dotenv>=0.20.0
-openai==0.27.0
-pexels-api==1.0.1
+elevenlabs==0.2.6
 whisper==1.0.0
-opencv-python==4.6.0.66
-elevenlabs==1.0.0
+pexels-api==1.0.0
+openai==0.27.8
+numpy==1.24.3
+torch==2.0.1
+tqdm==4.65.0
+ffmpeg-python==0.2.0
+gunicorn==20.1.0
