--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ python-dotenv==1.0.0
 requests==2.31.0
 moviepy==1.0.3
 elevenlabs==0.2.26
-openai-whisper==20231117  # Correct package name
+openai-whisper==20231117
 pexels-api==1.0.1
 openai==1.3.6
 numpy==1.24.3
